--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.5",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.24.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "react-qr-code": "^2.0.15",
     "sonner": "^2.0.3",
     "stripe": "^18.1.1",
-    "tailwind-merge": "^3.3.0"
+    "stripe-cli": "^0.1.0",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
